# fcp-core

./: README.md
.github/workflows/: publish-npm.yml
python/: pyproject.toml
python/src/fcp_core/: __init__.py  bridge.py  server.py  session.py  tokenizer.py
python/tests/: test_tokenizer.py
typescript/: package-lock.json  package.json
typescript/src/: bridge.ts  event-log.ts  index.ts  server.ts  session.ts  tokenizer.ts
typescript/tests/: session.test.ts  tokenizer.test.ts
