[project]
name = "fcp-core"
version = "0.1.17"
description = "File Context Protocol — reusable framework for building MCP servers that let LLMs interact with complex file formats"
requires-python = ">=3.11,<3.14"
dependencies = [
    "mcp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fcp_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
